improved docker,use nodemon,added model methods

--- a/public/view/number.html
+++ b/public/view/number.html
@@ -8,6 +8,7 @@
 
 <br>
 <h2>SMS</h2>
+<h4>Unfortunately old at top right now :(</h4>
 <div ng-repeat="(key, value) in ctrl.msgs">
         <p>
             From: {{value.From}}
