added proper login and restrict to tetrascience as the email domain

--- a/public/view/number.html
+++ b/public/view/number.html
@@ -1,4 +1,7 @@
 
+<!-- Button that handles sign-in/sign-out -->
+<button ng-click="ctrl.signOut()">Sign out with Google</button>
+
 <h2>Available numbers</h2>
 
 
