--- a/public/view/number.html
+++ b/public/view/number.html
@@ -11,13 +11,12 @@
 
 <br>
 <h2>SMS</h2>
-<h4>Unfortunately old at top right now :(</h4>
-<div ng-repeat="(key, value) in ctrl.msgs">
-        <p>
-            From: {{value.From}}
-            <br>
-            Msg Body:<span ng-bind-html="value.Body"></span>
-        </p>
-</div>
 
+<div ng-repeat="item in ctrl.arr">
+    <p>
+        From: {{item.From}}
+        <br>
+        Msg Body:<span ng-bind-html="item.Body"></span>
+    </p>
+</div>
 
